@@ -1931,6 +1931,8 @@ FUNCS += functions/gnutls_session_get_id
 FUNCS += functions/gnutls_session_get_id.short
 FUNCS += functions/gnutls_session_get_id2
 FUNCS += functions/gnutls_session_get_id2.short
+FUNCS += functions/gnutls_session_get_keylog_function
+FUNCS += functions/gnutls_session_get_keylog_function.short
 FUNCS += functions/gnutls_session_get_master_secret
 FUNCS += functions/gnutls_session_get_master_secret.short
 FUNCS += functions/gnutls_session_get_ptr
